--- a/src/pertanyaan.yml
+++ b/src/pertanyaan.yml
@@ -17,3 +17,11 @@
 - Bisakah kita menyadari bahwa benda tiba-tiba bergerak?
 - Apa hukuman zina di neraka?
 - Apakah Khalifah Makmun itu muslim?
+- Kenapa kalau ingin kegiatan malam hari harus dilist?
+- Apa itu generasi healing dan generasi feodal?
+- Kenapa harus memanfaatkan malam padahal untuk istirahat?
+- Apa maksud manusia adalah anak zamannya?
+- Apa itu habit?
+- Apa itu menyaring informasi?
+- Apa maksud umur terbatas?
+- Apa itu mengumpulkan duit?
